--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.7.0
   dotted_border: ^2.1.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1
+  get_it: ^8.0.0
   google_fonts: ^6.2.1
+  jwt_decoder: ^2.0.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
