--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,14 @@ dependencies:
   flutter_svg: ^2.0.10+1
   get_it: ^8.0.0
   google_fonts: ^6.2.1
+  http_parser: null
+  image_picker: ^1.1.2
+  intl: ^0.19.0
   jwt_decoder: ^2.0.1
+  mime: null
+  pull_to_refresh: ^2.0.0
+  qr_code_scanner: ^1.0.1
+  qr_flutter: ^4.1.0
   shared_preferences: ^2.3.2
 
 dev_dependencies:
